cmake_minimum_required(VERSION 3.16)


add_subdirectory(operating_system-posix/nano_account_posix)
add_subdirectory(operating_system-posix/nano_dynamic_library_dl)
add_subdirectory(operating_system-posix/nano_dynamic_library_dl_null)


add_subdirectory(operating_system-posix/nano_http_command_line)

add_subdirectory(operating_system-posix/nano_compress_command_line)


add_subdirectory(operating_system-posix/acme_posix)
add_subdirectory(operating_system-linux/acme_linux)

if(${HAS_GTK4})
    add_subdirectory(operating_system-posix/nano_user_gtk4)
elseif(${HAS_GTK3})
    add_subdirectory(operating_system-posix/nano_user_gtk3)
elseif(${HAS_KDE6})
    add_subdirectory(operating_system-posix/nano_user_kde6)
elseif(${HAS_KDE5})
    add_subdirectory(operating_system-posix/nano_user_kde5)
endif()

if(NOT ${CONSOLE_BUILD_TOOLS})
    # CONSOLE_BUILD_TOOLS are dependant just on linux kernel version and glib version?

add_subdirectory(operating_system-posix/apex_posix)
add_subdirectory(operating_system-linux/apex_linux)
add_subdirectory(operating_system-posix/aura_posix)
add_subdirectory(operating_system-linux/aura_linux)
add_subdirectory(operating_system-posix/windowing_posix)
add_subdirectory(operating_system-linux/node_linux)
if(LXDE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gdk)
    add_subdirectory(operating_system-posix/node_gtk3)
    add_subdirectory(operating_system-posix/node_gnome)
    add_subdirectory(operating_system-linux/desktop_environment_gnome)
endif()
#if(XFCE_DESKTOP)
#    add_subdirectory(operating_system-posix/windowing_x11)
#    add_subdirectory(operating_system-posix/node_gdk)
#    add_subdirectory(operating_system-posix/node_gtk3)
#    add_subdirectory(operating_system-posix/node_xfce)
#    add_subdirectory(operating_system-linux/desktop_environment_xfce)
#endif()
if(${GTK_BASED_DESKTOP})
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gdk)
    if(${HAS_WAYLAND})
        add_subdirectory(operating_system-posix/windowing_wayland)
    endif()
    if(${HAS_GTK4})
        add_subdirectory(operating_system-posix/windowing_system_gtk4)
        add_subdirectory(operating_system-posix/innate_ui_gtk4)
        add_subdirectory(operating_system-posix/windowing_gtk4)
        add_subdirectory(operating_system-posix/node_gtk4)
    elseif(${HAS_GTK3})
        add_subdirectory(operating_system-posix/windowing_system_gtk3)
        add_subdirectory(operating_system-posix/innate_ui_gtk3)
        add_subdirectory(operating_system-posix/windowing_gtk3)
        add_subdirectory(operating_system-posix/node_gtk3)
    endif()
    add_subdirectory(operating_system-posix/node_gtk_based)
    add_subdirectory(operating_system-linux/desktop_environment_gtk_based)
endif()
if(XFCE_DESKTOP)
#    add_subdirectory(operating_system-posix/windowing_x11)
#    add_subdirectory(operating_system-posix/node_gdk)
#    add_subdirectory(operating_system-posix/node_gtk3)
    add_subdirectory(operating_system-posix/node_xfce)
    add_subdirectory(operating_system-linux/desktop_environment_xfce)
endif()
if(${KDE_DESKTOP})
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/windowing_xcb)
    if(${HAS_WAYLAND})
        add_subdirectory(operating_system-posix/windowing_wayland)
    endif()
    if(${HAS_KDE6})
    add_subdirectory(operating_system-posix/node_kde6)
    elseif(${HAS_KDE5})
        add_subdirectory(operating_system-posix/windowing_system_kde5)
        add_subdirectory(operating_system-posix/innate_ui_kde5)
        add_subdirectory(operating_system-posix/windowing_kde5)
        add_subdirectory(operating_system-posix/node_kde5)
    endif()
    add_subdirectory(operating_system-linux/desktop_environment_kde)
endif()


add_subdirectory(operating_system-posix/write_text_pango)
add_subdirectory(operating_system-posix/audio_alsa)
#add_subdirectory(operating_system-posix/audio_sndio)
if(${HAS_WAYLAND})
add_subdirectory(operating_system-posix/input_libinput)
endif()
if(${HAS_X11})
add_subdirectory(operating_system-posix/input_xinput)
endif()
if(${HAS_AUDIO_SYSTEM})
    add_subdirectory(operating_system-linux/audio_mixer_alsa)
endif()
if(${HAS_APP_VERIWELL})
add_subdirectory(operating_system-posix/music_midi_alsa)
endif()

add_subdirectory(operating_system-posix/nano_http_libcurl)


add_subdirectory(operating_system-posix/nano_graphics_cairo)


add_subdirectory(operating_system-posix/windowing_system_x11)
add_subdirectory(operating_system-posix/nano_user_x11)

add_subdirectory(operating_system-posix/windowing_system_xcb)
add_subdirectory(operating_system-posix/nano_user_xcb)

if(${HAS_WAYLAND})

    add_subdirectory(operating_system-posix/windowing_system_wayland)
    add_subdirectory(operating_system-posix/nano_user_wayland)

endif()


endif()